# mac-android-file-transfer

./: .gitignore  AGENTS.md  README.md  pyproject.toml
src/maft/: __init__.py  cli.py
tests/e2e/: test_cli.py
