[project]
name = "mac-android-file-transfer"
version = "0.2.4"
description = "macOS CLI wrapper around go-mtpfs for Android file transfer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
maft = "maft.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/maft"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.basedpyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "strict"

[dependency-groups]
dev = [
    "basedpyright>=1.39.3",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
